--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <section class="row features ">
+  <section class="section-about">
       <h2>About GlobalTech Financial, LLC.</h2>
       <p>
         GlobalTech is a world-class combination of highly experienced management and staff, proven business processes and leading
@@ -50,7 +50,7 @@
       <h2>Services</h2>
     </div>
     <div class="row ">
-      <div class="col span-1-of-3 ">
+      <div class="col-1-of-3 ">
         <h3>Permanent Staffing</h3>
         <p>
           When handled in-house, filling your internal staffing needs is often a difficult, time consuming and costly proposition.
@@ -59,7 +59,7 @@
           the drive to secure the long-term personnel you need when you need them.
         </p>
       </div>
-      <div class="col span-1-of-3 ">
+      <div class="col-1-of-3 ">
         <h3>Managed Services</h3>
         <p>
           Managed Services is a flexible set of services supporting a customer’s full supply chain management including resource acquisition,
@@ -67,7 +67,7 @@
           a platform to improve the visibility and management of contract spend.
         </p>
       </div>
-      <div class="col span-1-of-3 ">
+      <div class="col-1-of-3 ">
         <h3>Administrative Services</h3>
         <p>
           GlobalTech provides Senior Executive and Board Member services, allowing your organization the ability to utilize your key
