--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
       </h1>
     </div>
   </header>
-
-  <section class="section-about">
-      <h2>About GlobalTech Financial, LLC.</h2>
+  <main>
+    <section class="section-about">
+      <div class="util-center-text util-margin-bottom-8">
+        <h2 class="heading-secondary">
+          About GlobalTech Financial, LLC.
+        </h2>
+      </div>
       <p>
         GlobalTech is a world-class combination of highly experienced management and staff, proven business processes and leading
         edge technological capabilities. GlobalTech offers a variety of technical and service solutions to help unlock your
@@ -43,53 +47,54 @@
       <p>
         With a world view on management consulting and business process and IT outsourcing, GlobalTech gives you the freedom to soar.
       </p>
-  </section>
+    </section>
 
-  <section class="services ">
-    <div class="row ">
-      <h2>Services</h2>
-    </div>
-    <div class="row ">
-      <div class="col-1-of-3 ">
-        <h3>Permanent Staffing</h3>
-        <p>
-          When handled in-house, filling your internal staffing needs is often a difficult, time consuming and costly proposition.
-          Since 2000, our diverse client base has turned to GlobalTech for full-time placement services. Whether on a contract-to-hire
-          basis, or simply as an adjunct to your Human Resource capabilities, we have the team, the tools, the know-how and
-          the drive to secure the long-term personnel you need when you need them.
-        </p>
+    <section class="section-services">
+      <div class="row ">
+        <h2>Services</h2>
       </div>
-      <div class="col-1-of-3 ">
-        <h3>Managed Services</h3>
-        <p>
-          Managed Services is a flexible set of services supporting a customer’s full supply chain management including resource acquisition,
-          rate management, supplier support and billing, invoicing and payment. These strategic sourcing services provide
-          a platform to improve the visibility and management of contract spend.
-        </p>
+      <div class="row ">
+        <div class="col-1-of-3 ">
+          <h3>Permanent Staffing</h3>
+          <p>
+            When handled in-house, filling your internal staffing needs is often a difficult, time consuming and costly proposition.
+            Since 2000, our diverse client base has turned to GlobalTech for full-time placement services. Whether on a contract-to-hire
+            basis, or simply as an adjunct to your Human Resource capabilities, we have the team, the tools, the know-how
+            and the drive to secure the long-term personnel you need when you need them.
+          </p>
+        </div>
+        <div class="col-1-of-3 ">
+          <h3>Managed Services</h3>
+          <p>
+            Managed Services is a flexible set of services supporting a customer’s full supply chain management including resource acquisition,
+            rate management, supplier support and billing, invoicing and payment. These strategic sourcing services provide
+            a platform to improve the visibility and management of contract spend.
+          </p>
+        </div>
+        <div class="col-1-of-3 ">
+          <h3>Administrative Services</h3>
+          <p>
+            GlobalTech provides Senior Executive and Board Member services, allowing your organization the ability to utilize your key
+            assets wisely. We conserve the executives&#8217; time by reading, researching, and routing correspondence; drafting
+            letters and documents; collecting and analyzing information; initiating telecommunications. We also will maintain
+            executives&#8217; appointment schedule by planning and scheduling meetings, conferences, teleconferences, and
+            travel.
+          </p>
+        </div>
       </div>
-      <div class="col-1-of-3 ">
-        <h3>Administrative Services</h3>
-        <p>
-          GlobalTech provides Senior Executive and Board Member services, allowing your organization the ability to utilize your key
-          assets wisely. We conserve the executives&#8217; time by reading, researching, and routing correspondence; drafting
-          letters and documents; collecting and analyzing information; initiating telecommunications. We also will maintain
-          executives&#8217; appointment schedule by planning and scheduling meetings, conferences, teleconferences, and travel.
-        </p>
-      </div>
-    </div>
-  </section>
-  <section class="contact ">
-    <div class="row ">
-      <div class="col span-1-of-2 ">
+    </section>
+    <section class="section-contact">
+      <div class="row ">
+        <div class="col span-1-of-2 ">
 
+        </div>
+        <div class="col span-1-of-2 ">
+
+        </div>
       </div>
-      <div class="col span-1-of-2 ">
 
-      </div>
-    </div>
-
-  </section>
-
+    </section>
+  </main>
 
   <script src="ext/js/jquery-2.2.0.js " type="text/javascript "></script>
   <script src="ext/js/bootstrap.min.js " type="text/javascript "></script>
